# yt-rag

./: .gitignore  Makefile  README.md  chat_output.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: v0.2_presentation.md
src/yt_rag/: __init__.py  _version.py  chapters.py  cli.py  config.py  db.py  discovery.py  embed.py  eval.py  export.py  keywords.py  models.py  openai_client.py  search.py  sectionize.py  service.py  summarize.py  test_generate.py  transcript.py  vectorstore.py
tests/data/: benchmark_generated_gpt-4o.json  benchmark_report.html  benchmark_report_disagree.html  benchmark_report_empty.html  benchmark_results_gpt-4o.json  benchmark_results_gpt-4o_gpt4o.json  benchmark_results_gpt-4o_qwen.json  raw_videos.json  video_analysis_gpt-4o.json
