[project]
name = "yt-rag"
version = "0.1.0"
description = "Extract YouTube transcripts for RAG pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.11.12",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
yt-rag = "yt_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
